@@ -22,6 +22,7 @@ CHANGELOG
 
 Boost V1.51.0
  - Fixed #7050: Invalid memory write bug in lexing_exception
+ - Fixed #7159: Text-lines are processed as if they were preprocessing directives
 
 Boost V1.50.0
  - V2.3.2
